--- a/resources/views/ModelCreation.fxml
+++ b/resources/views/ModelCreation.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
@@ -41,7 +42,10 @@
                <content>
                   <ScrollPane prefHeight="200.0" prefWidth="200.0">
                      <content>
-                        <AnchorPane fx:id="domainDetails" />
+                        <VBox fx:id="domainDetails" spacing="5.0">
+                           <padding>
+                              <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                           </padding></VBox>
                      </content>
                   </ScrollPane>
                </content>
