--- a/resources/views/ModelViz.fxml
+++ b/resources/views/ModelViz.fxml
@@ -9,14 +9,14 @@
 
 <SplitPane dividerPositions="0.2567849686847599" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="javaFX.controllers.ModelVizController">
   <items>
-      <VBox prefHeight="200.0" prefWidth="100.0">
+      <VBox maxHeight="1.7976931348623157E308" prefHeight="200.0" prefWidth="100.0">
          <children>
             <StackPane minHeight="50.0" prefHeight="50.0">
                <children>
                   <Button maxWidth="100.0" mnemonicParsing="false" onAction="#reloadTree" text="Reload" />
                </children>
             </StackPane>
-            <TreeView fx:id="treeView" prefHeight="720.0" />
+            <TreeView fx:id="treeView" maxHeight="1.7976931348623157E308" VBox.vgrow="ALWAYS" />
          </children>
       </VBox>
       <WebView fx:id="webView" prefHeight="720.0" prefWidth="740.0" />
